# SinoViet-Corpus

./: .gitattributes  .gitignore  CLAUDE.md  DATA_LICENSE  LICENSE  README.md  pyproject.toml
docs/: 00_problem.md  01_setup.md  02_data.md  03_pipeline.md  04_eval.md  05_troubleshooting.md  06_extend.md  07_unlimited_ocr.md  08_results.md  09_han_pipeline.md  README.md
scripts/: convert_paddlevl.py  run_pipeline.sh  setup.sh  setup_uv.sh  snapshot_paddle.sh  snapshot_unlimited.sh  start_unlimited_ocr.sh
src/01_prep/: normalize_han.py  pdf_to_images.py
src/02_ocr/: llm_correct.py  paddle_ocr.py  unlimited_ocr.py
src/03_split/: split_han.py  split_vi.py
src/04_embed/: labse_embed.py
src/05_align/: bertalign_runner.py  vecalign_runner.py
src/06_ner/: ner_bridge.py  ner_han.py  ner_vi.py
src/07_eval/: auto_metrics.py  export_corpus.py  flores_sanity.py  holdout_mt.py  llm_ensemble_judge.py  round_trip.py
src/07_export/: export_deliverable.py
src/utils/: config.py
