[project]
name = "hvb"
version = "0.1.0"
description = "Han-Viet parallel corpus pipeline — Dai Nam Thuc Luc"
requires-python = ">=3.10,<3.12"
dependencies = [
    # PDF + image
    "pdf2image>=1.17",
    "Pillow>=10",
    # OCR
    "paddleocr>=2.7",
    "paddlepaddle-gpu>=2.6; platform_system=='Linux'",
    # NLP VI
    "underthesea>=6.8",
    # NLP ZH
    "hanlp>=2.1.3",
    # embeddings + alignment
    "sentence-transformers>=3",
    "numpy>=1.26",
    # NER
    "transformers>=4.44",
    "torch>=2.3",
    "accelerate>=0.34",
    # MT eval
    "unbabel-comet>=2.2",
    "sacrebleu>=2.4",
    "bert-score>=0.3.13",
    "jiwer>=3",
    # data
    "datasets>=2.20",
    # agreement
    "krippendorff>=0.7",
    # Ollama HTTP client (talks to docker ollama on :11434)
    "ollama>=0.3",
    # utils
    "tqdm>=4",
    "pyyaml>=6",
    "rich>=13",
    "cython>=3.2.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "ipython",
]

[tool.uv]
default-groups = []

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "paddle-gpu"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu118/"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
paddlepaddle-gpu = [{ index = "paddle-gpu" }]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
