[project]
name = "hvb"
version = "0.1.0"
description = "Han-Viet parallel corpus pipeline — Dai Nam Thuc Luc"
requires-python = ">=3.10,<3.12"
dependencies = [
    # PDF + image
    "pdf2image>=1.17",
    "Pillow>=10",
    # OCR
    "paddleocr>=2.7",
    "paddlepaddle-gpu>=2.6; platform_system=='Linux'",
    # NLP VI
    "underthesea>=6.8",
    # embeddings + alignment (LaBSE via sentence-transformers)
    "sentence-transformers>=3",
    "numpy>=1.26",
    "transformers>=4.44",
    "torch>=2.3",
    "accelerate>=0.34",
    # vLLM OpenAI-compatible client (optional OCR post-correction, docker vllm)
    "openai>=1.50",
    # utils
    "tqdm>=4",
    "pyyaml>=6",
    "rich>=13",
    "cython>=3.2.6",
    "openpyxl>=3.1.5",
    "faiss-cpu>=1.7",
    "numba>=0.60",
    "sentence-splitter>=1.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "ipython",
]

[tool.uv]
default-groups = []

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "paddle-gpu"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu118/"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
paddlepaddle-gpu = [{ index = "paddle-gpu" }]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
